# ELO328-Project

./: .gitignore  Avance Hito 2- Stephanie Salazar.docx  README.md  bd.sql  scripts.py
Interfaz/: Interfaz.pro  dialog1.cpp  dialog1.h  dialog1.ui  dialog2.cpp  dialog2.h  dialog2.ui  dialog3.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Veins/: CMakeLists.txt  main.cpp
